src/port_uri.cc

#line 1 "src/port_uri.rl"
/*
 * Redistribution and use in source and binary forms, with or
 * without modification, are permitted provided that the following
 * conditions are met:
 *
 * 1. Redistributions of source code must retain the above
 *    copyright notice, this list of conditions and the
 *    following disclaimer.
 *
 * 2. Redistributions in binary form must reproduce the above
 *    copyright notice, this list of conditions and the following
 *    disclaimer in the documentation and/or other materials
 *    provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY <COPYRIGHT HOLDER> ``AS IS'' AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
 * TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
 * <COPYRIGHT HOLDER> OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
 * INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 * THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 * SUCH DAMAGE.
 */
#include "port_uri.h"
#include <string.h>
#include <stdlib.h>
#include <stdio.h>
#include <assert.h>
#include <sys/socket.h>
#include <netinet/ip.h>
#include <netinet/in.h>
#include <arpa/inet.h>
#include <sys/un.h>
#include <netdb.h>

const char *
port_uri_to_string(const struct port_uri * uri)
{
	static __thread char
		str[NI_MAXSERV + NI_MAXHOST + sizeof(uri->schema)];

	if (!uri || !uri->addr_len) {
		snprintf(str, sizeof(str), "unknown address");
		return str;
	}

	switch (uri->addr.sa_family) {
	case AF_INET6:
	case AF_INET:
	{
		char shost[NI_MAXHOST];
		char sservice[NI_MAXSERV];
		getnameinfo(
			    (struct sockaddr *)&uri->addr,
			    uri->addr_len,
			    shost, sizeof(shost),
			    sservice, sizeof(sservice),
			    NI_NUMERICHOST|NI_NUMERICSERV);
		if (uri->addr.sa_family == AF_INET) {
			if (strncmp(uri->schema, "tcp", 3) == 0) {
				snprintf(str, sizeof(str), "%s:%s",
					 shost, sservice);
			} else {
				snprintf(str, sizeof(str), "%s://%s:%s",
					 uri->schema, shost, sservice);
			}
		} else {
			if (strncmp(uri->schema, "tcp", 3) == 0) {
				snprintf(str, sizeof(str), "%s:%s",
					 shost, sservice);
			} else {
				snprintf(str, sizeof(str), "%s://[%s]:%s",
					 uri->schema, shost, sservice);
			}
		}
                break;
	}
	case AF_UNIX:
	{
		struct sockaddr_un *un =
			(struct sockaddr_un *)&uri->addr;
		snprintf(str, sizeof(str), "unix://%.*s",
			 (int) sizeof(un->sun_path), un->sun_path);
	        break;
	}
	default:
		snprintf(str, sizeof(str), "unknown address");
	        break;
	}
	return str;
}

int
port_uri_parse(struct port_uri *uri, const char *p)
{
	(void) uri;
	const char *pe = p + strlen(p);
	const char *eof = pe;
	int cs;
	memset(uri, 0, sizeof(*uri));

	struct {
		const char *start;
		const char *end;
	}	schema		= { 0, 0 },
		host		= { 0, 0 },
		service		= { 0, 0 },
		sport		= { 0, 0 },
		login		= { 0, 0 },
		password	= { 0, 0 },
		ip4		= { 0, 0 },
		ip6		= { 0, 0 },
		path		= { 0, 0 },
		dport		= { 0, 0 }
	;

	unsigned port = 0;

	
#line 128 "src/port_uri.cc"
static const int port_uri_start = 1;
static const int port_uri_first_final = 74;
static const int port_uri_error = 0;

static const int port_uri_en_main = 1;


#line 136 "src/port_uri.cc"
	{
	cs = port_uri_start;
	}

#line 141 "src/port_uri.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 47: goto tr1;
		case 48: goto tr2;
		case 58: goto st0;
		case 63: goto st0;
		case 91: goto tr6;
		case 117: goto tr7;
	}
	if ( (*p) < 65 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr3;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr5;
	} else
		goto tr5;
	goto tr0;
tr0:
#line 157 "src/port_uri.rl"
	{ host.start   = p; }
	goto st74;
tr82:
#line 133 "src/port_uri.rl"
	{ schema.end   = p - 3; }
#line 157 "src/port_uri.rl"
	{ host.start   = p; }
	goto st74;
st74:
	if ( ++p == pe )
		goto _test_eof74;
case 74:
#line 179 "src/port_uri.cc"
	switch( (*p) ) {
		case 58: goto tr94;
		case 63: goto st0;
	}
	goto st74;
tr94:
#line 158 "src/port_uri.rl"
	{ host.end     = p; }
	goto st2;
tr144:
#line 145 "src/port_uri.rl"
	{ ip4.end   = p; }
#line 158 "src/port_uri.rl"
	{ host.end     = p; }
	goto st2;
tr157:
#line 154 "src/port_uri.rl"
	{ ip6.end   = p - 1; }
#line 158 "src/port_uri.rl"
	{ host.end     = p; }
	goto st2;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
#line 205 "src/port_uri.cc"
	if ( (*p) < 65 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr8;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr9;
	} else
		goto tr9;
	goto st0;
st0:
cs = 0;
	goto _out;
tr8:
#line 166 "src/port_uri.rl"
	{ service.start = p; }
#line 161 "src/port_uri.rl"
	{ dport.start   = p; port = 0; }
#line 162 "src/port_uri.rl"
	{ port = port * 10 + (int)(*p - '0'); }
	goto st75;
tr95:
#line 162 "src/port_uri.rl"
	{ port = port * 10 + (int)(*p - '0'); }
	goto st75;
st75:
	if ( ++p == pe )
		goto _test_eof75;
case 75:
#line 234 "src/port_uri.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr95;
	goto st0;
tr9:
#line 166 "src/port_uri.rl"
	{ service.start = p; }
	goto st76;
st76:
	if ( ++p == pe )
		goto _test_eof76;
case 76:
#line 246 "src/port_uri.cc"
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st77;
	} else if ( (*p) >= 65 )
		goto st77;
	goto st0;
st77:
	if ( ++p == pe )
		goto _test_eof77;
case 77:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st78;
	} else if ( (*p) >= 65 )
		goto st78;
	goto st0;
st78:
	if ( ++p == pe )
		goto _test_eof78;
case 78:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st79;
	} else if ( (*p) >= 65 )
		goto st79;
	goto st0;
st79:
	if ( ++p == pe )
		goto _test_eof79;
case 79:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st80;
	} else if ( (*p) >= 65 )
		goto st80;
	goto st0;
st80:
	if ( ++p == pe )
		goto _test_eof80;
case 80:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st81;
	} else if ( (*p) >= 65 )
		goto st81;
	goto st0;
st81:
	if ( ++p == pe )
		goto _test_eof81;
case 81:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st82;
	} else if ( (*p) >= 65 )
		goto st82;
	goto st0;
st82:
	if ( ++p == pe )
		goto _test_eof82;
case 82:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st83;
	} else if ( (*p) >= 65 )
		goto st83;
	goto st0;
st83:
	if ( ++p == pe )
		goto _test_eof83;
case 83:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st84;
	} else if ( (*p) >= 65 )
		goto st84;
	goto st0;
st84:
	if ( ++p == pe )
		goto _test_eof84;
case 84:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st85;
	} else if ( (*p) >= 65 )
		goto st85;
	goto st0;
st85:
	if ( ++p == pe )
		goto _test_eof85;
case 85:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st86;
	} else if ( (*p) >= 65 )
		goto st86;
	goto st0;
st86:
	if ( ++p == pe )
		goto _test_eof86;
case 86:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st87;
	} else if ( (*p) >= 65 )
		goto st87;
	goto st0;
st87:
	if ( ++p == pe )
		goto _test_eof87;
case 87:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st88;
	} else if ( (*p) >= 65 )
		goto st88;
	goto st0;
st88:
	if ( ++p == pe )
		goto _test_eof88;
case 88:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st89;
	} else if ( (*p) >= 65 )
		goto st89;
	goto st0;
st89:
	if ( ++p == pe )
		goto _test_eof89;
case 89:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st90;
	} else if ( (*p) >= 65 )
		goto st90;
	goto st0;
st90:
	if ( ++p == pe )
		goto _test_eof90;
case 90:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st91;
	} else if ( (*p) >= 65 )
		goto st91;
	goto st0;
st91:
	if ( ++p == pe )
		goto _test_eof91;
case 91:
	goto st0;
tr1:
#line 157 "src/port_uri.rl"
	{ host.start   = p; }
#line 176 "src/port_uri.rl"
	{ path.start = p; }
	goto st92;
st92:
	if ( ++p == pe )
		goto _test_eof92;
case 92:
#line 408 "src/port_uri.cc"
	switch( (*p) ) {
		case 58: goto tr112;
		case 63: goto st95;
	}
	goto st93;
st93:
	if ( ++p == pe )
		goto _test_eof93;
case 93:
	switch( (*p) ) {
		case 58: goto tr112;
		case 63: goto st95;
	}
	goto st93;
tr112:
#line 158 "src/port_uri.rl"
	{ host.end     = p; }
	goto st94;
st94:
	if ( ++p == pe )
		goto _test_eof94;
case 94:
#line 431 "src/port_uri.cc"
	if ( (*p) < 65 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr114;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr115;
	} else
		goto tr115;
	goto st95;
st95:
	if ( ++p == pe )
		goto _test_eof95;
case 95:
	goto st95;
tr114:
#line 166 "src/port_uri.rl"
	{ service.start = p; }
#line 161 "src/port_uri.rl"
	{ dport.start   = p; port = 0; }
#line 162 "src/port_uri.rl"
	{ port = port * 10 + (int)(*p - '0'); }
	goto st96;
tr116:
#line 162 "src/port_uri.rl"
	{ port = port * 10 + (int)(*p - '0'); }
	goto st96;
st96:
	if ( ++p == pe )
		goto _test_eof96;
case 96:
#line 462 "src/port_uri.cc"
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr116;
	goto st95;
tr115:
#line 166 "src/port_uri.rl"
	{ service.start = p; }
	goto st97;
st97:
	if ( ++p == pe )
		goto _test_eof97;
case 97:
#line 474 "src/port_uri.cc"
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st98;
	} else if ( (*p) >= 65 )
		goto st98;
	goto st95;
st98:
	if ( ++p == pe )
		goto _test_eof98;
case 98:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st99;
	} else if ( (*p) >= 65 )
		goto st99;
	goto st95;
st99:
	if ( ++p == pe )
		goto _test_eof99;
case 99:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st100;
	} else if ( (*p) >= 65 )
		goto st100;
	goto st95;
st100:
	if ( ++p == pe )
		goto _test_eof100;
case 100:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st101;
	} else if ( (*p) >= 65 )
		goto st101;
	goto st95;
st101:
	if ( ++p == pe )
		goto _test_eof101;
case 101:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st102;
	} else if ( (*p) >= 65 )
		goto st102;
	goto st95;
st102:
	if ( ++p == pe )
		goto _test_eof102;
case 102:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st103;
	} else if ( (*p) >= 65 )
		goto st103;
	goto st95;
st103:
	if ( ++p == pe )
		goto _test_eof103;
case 103:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st104;
	} else if ( (*p) >= 65 )
		goto st104;
	goto st95;
st104:
	if ( ++p == pe )
		goto _test_eof104;
case 104:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st105;
	} else if ( (*p) >= 65 )
		goto st105;
	goto st95;
st105:
	if ( ++p == pe )
		goto _test_eof105;
case 105:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st106;
	} else if ( (*p) >= 65 )
		goto st106;
	goto st95;
st106:
	if ( ++p == pe )
		goto _test_eof106;
case 106:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st107;
	} else if ( (*p) >= 65 )
		goto st107;
	goto st95;
st107:
	if ( ++p == pe )
		goto _test_eof107;
case 107:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st108;
	} else if ( (*p) >= 65 )
		goto st108;
	goto st95;
st108:
	if ( ++p == pe )
		goto _test_eof108;
case 108:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st109;
	} else if ( (*p) >= 65 )
		goto st109;
	goto st95;
st109:
	if ( ++p == pe )
		goto _test_eof109;
case 109:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st110;
	} else if ( (*p) >= 65 )
		goto st110;
	goto st95;
st110:
	if ( ++p == pe )
		goto _test_eof110;
case 110:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st111;
	} else if ( (*p) >= 65 )
		goto st111;
	goto st95;
st111:
	if ( ++p == pe )
		goto _test_eof111;
case 111:
	if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st112;
	} else if ( (*p) >= 65 )
		goto st112;
	goto st95;
st112:
	if ( ++p == pe )
		goto _test_eof112;
case 112:
	goto st95;
tr2:
#line 136 "src/port_uri.rl"
	{ login.start  = p; }
#line 157 "src/port_uri.rl"
	{ host.start   = p; }
#line 144 "src/port_uri.rl"
	{ ip4.start = p; }
	goto st113;
tr83:
#line 133 "src/port_uri.rl"
	{ schema.end   = p - 3; }
#line 136 "src/port_uri.rl"
	{ login.start  = p; }
#line 157 "src/port_uri.rl"
	{ host.start   = p; }
#line 144 "src/port_uri.rl"
	{ ip4.start = p; }
	goto st113;
st113:
	if ( ++p == pe )
		goto _test_eof113;
case 113:
#line 648 "src/port_uri.cc"
	switch( (*p) ) {
		case 46: goto st114;
		case 58: goto tr134;
		case 63: goto st0;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st126;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st128;
	} else
		goto st128;
	goto st74;
st114:
	if ( ++p == pe )
		goto _test_eof114;
case 114:
	switch( (*p) ) {
		case 58: goto tr94;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st115;
	goto st74;
st115:
	if ( ++p == pe )
		goto _test_eof115;
case 115:
	switch( (*p) ) {
		case 46: goto st116;
		case 58: goto tr94;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st124;
	goto st74;
st116:
	if ( ++p == pe )
		goto _test_eof116;
case 116:
	switch( (*p) ) {
		case 58: goto tr94;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st117;
	goto st74;
st117:
	if ( ++p == pe )
		goto _test_eof117;
case 117:
	switch( (*p) ) {
		case 46: goto st118;
		case 58: goto tr94;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st122;
	goto st74;
st118:
	if ( ++p == pe )
		goto _test_eof118;
case 118:
	switch( (*p) ) {
		case 58: goto tr94;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st119;
	goto st74;
st119:
	if ( ++p == pe )
		goto _test_eof119;
case 119:
	switch( (*p) ) {
		case 58: goto tr144;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st120;
	goto st74;
st120:
	if ( ++p == pe )
		goto _test_eof120;
case 120:
	switch( (*p) ) {
		case 58: goto tr144;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st121;
	goto st74;
st121:
	if ( ++p == pe )
		goto _test_eof121;
case 121:
	switch( (*p) ) {
		case 58: goto tr144;
		case 63: goto st0;
	}
	goto st74;
st122:
	if ( ++p == pe )
		goto _test_eof122;
case 122:
	switch( (*p) ) {
		case 46: goto st118;
		case 58: goto tr94;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st123;
	goto st74;
st123:
	if ( ++p == pe )
		goto _test_eof123;
case 123:
	switch( (*p) ) {
		case 46: goto st118;
		case 58: goto tr94;
		case 63: goto st0;
	}
	goto st74;
st124:
	if ( ++p == pe )
		goto _test_eof124;
case 124:
	switch( (*p) ) {
		case 46: goto st116;
		case 58: goto tr94;
		case 63: goto st0;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st125;
	goto st74;
st125:
	if ( ++p == pe )
		goto _test_eof125;
case 125:
	switch( (*p) ) {
		case 46: goto st116;
		case 58: goto tr94;
		case 63: goto st0;
	}
	goto st74;
st126:
	if ( ++p == pe )
		goto _test_eof126;
case 126:
	switch( (*p) ) {
		case 46: goto st114;
		case 58: goto tr134;
		case 63: goto st0;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st127;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st128;
	} else
		goto st128;
	goto st74;
st127:
	if ( ++p == pe )
		goto _test_eof127;
case 127:
	switch( (*p) ) {
		case 46: goto st114;
		case 58: goto tr134;
		case 63: goto st0;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st128;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st128;
	} else
		goto st128;
	goto st74;
tr84:
#line 133 "src/port_uri.rl"
	{ schema.end   = p - 3; }
#line 136 "src/port_uri.rl"
	{ login.start  = p; }
#line 157 "src/port_uri.rl"
	{ host.start   = p; }
	goto st128;
st128:
	if ( ++p == pe )
		goto _test_eof128;
case 128:
#line 843 "src/port_uri.cc"
	switch( (*p) ) {
		case 58: goto tr134;
		case 63: goto st0;
	}
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st128;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st128;
	} else
		goto st128;
	goto st74;
tr134:
#line 137 "src/port_uri.rl"
	{ login.end    = p; }
#line 158 "src/port_uri.rl"
	{ host.end     = p; }
	goto st3;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
#line 867 "src/port_uri.cc"
	if ( (*p) == 48 )
		goto tr10;
	if ( (*p) < 65 ) {
		if ( 49 <= (*p) && (*p) <= 57 )
			goto tr11;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto tr12;
	} else
		goto tr12;
	goto st0;
tr10:
#line 140 "src/port_uri.rl"
	{ password.start = p; }
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 887 "src/port_uri.cc"
	if ( (*p) == 64 )
		goto tr14;
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st4;
	} else if ( (*p) > 90 ) {
		if ( 97 <= (*p) && (*p) <= 122 )
			goto st4;
	} else
		goto st4;
	goto st0;
tr14:
#line 141 "src/port_uri.rl"
	{ password.end   = p; }
	goto st5;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
#line 907 "src/port_uri.cc"
	switch( (*p) ) {
		case 58: goto st0;
		case 63: goto st0;
		case 91: goto tr6;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr15;
	goto tr0;
tr15:
#line 157 "src/port_uri.rl"
	{ host.start   = p; }
